  * RDoc now adds the package title to the web pages that it generates
    for files and classes/modules, which helps them appear better in
    search engine results.
  * RDoc now automatically generates cross-reference links for classes and
    methods specified relative to the global namespace (i.e., ::A::B::C#method).
  * All built-in templates now output valid, strict XHTML.

* N Bug fixes:
  * Fixed prototype detection in C parser.  Can process ruby 1.8 C files
    again.
  * Fixed the main page for frameless template.  Patch by Marcin Raczkowski.
  * Fixed the main page for frame templates.  Now, if no main page is
    specified, RDoc will default to the README.
  * Fixed missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
  * Fixed the parsing of module names starting with '::'.  Patch by
    Giuseppe Bilotta.
  * Fixed a case where RDoc first would encounter Foo::Bar and then would
    encounter class Foo.  Previously, RDoc erroneously would have considered
    that both a Foo class and a Foo module existed.
  * Prevented RDoc from trying to parse binary files, which would produce
    garbage output.
  * Fixed some (but not all!) of the issues with RDoc's HTML typesetting:
  ** RDoc now correctly converts ' characters to apostrophes, opening single
     quotes, and closing single quotes in most cases (smart single quotes).
  ** RDoc now correctly converts " characters to opening double quotes and
     and closing double quotes in most cases (smart double quotes).
  * Fixed main page for frameless template.  Patch by Marcin Raczkowski.
  * Fixed missing stylesheet in generated chm.  Patch by Gordon Thiesfeld.
  * '&' characters in text now correctly are translated to HTML character
     codes.
  * Fixed broken method links in the built-in templates.
  * RDoc properly links to files and classes in the one page HTML template.
  * The kilmer and hefss templates properly syntax highlight when inlining
    source code.